feat: update cellbase tx detail

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -231,7 +231,9 @@
       "commit_reward": "Commit Reward",
       "proposal_reward": "Proposal Reward",
       "cellbase_help_tooltip": "The cellbase transaction of block N is sent to the miner of block N-11 as reward, learn more from our Consensus Protocol",
-      "capacity": "Capacity/Amount",
+      "capacity_amount": "Capacity/Amount",
+      "capacity": "Capacity",
+      "reward_info": "Reward info",
       "detail": "Detail",
       "empty_output": "No cell output target",
       "unspent_output": "Unspent Transaction Output",
@@ -239,7 +241,7 @@
       "height": "Height",
       "time": "Time",
       "transaction_parameters": "Transaction Parameters",
-      "ckb_transfer": "CKB Transfer",
+      "ckb_capacity": "CKB Capacity",
       "nervos_dao_deposit": "Nervos DAO Deposit",
       "nervos_dao_withdraw": "Nervos DAO Withdraw",
       "script_args": "args",
