--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -230,7 +230,9 @@
       "commit_reward": "提交奖励",
       "proposal_reward": "提案奖励",
       "cellbase_help_tooltip": "区块 N 的 Cellbase 交易将作为奖励发送给区块 N-11 的出块矿工，阅读共识协议了解更多信息",
-      "capacity": "Capacity/Amount",
+      "capacity": "Capacity",
+      "capacity_amount": "Capacity/Amount",
+      "reward_info": "区块奖励",
       "detail": "详情",
       "empty_output": "No cell output target",
       "unspent_output": "未花费的交易输出",
@@ -238,7 +240,7 @@
       "height": "区块高度",
       "time": "时间戳",
       "transaction_parameters": "更多交易参数",
-      "ckb_transfer": "CKB 转账",
+      "ckb_capacity": "CKB Capacity",
       "nervos_dao_deposit": "Nervos DAO 锁定",
       "nervos_dao_withdraw": "Nervos DAO 解锁",
       "script_args": "args",
