chore: Adapt cellbase tx detail for mobile

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -230,10 +230,14 @@
       "secondary_reward": "Secondary Reward",
       "commit_reward": "Commit Reward",
       "proposal_reward": "Proposal Reward",
+      "base": "Base",
+      "secondary": "Secondary",
+      "commit": "Commit",
+      "proposal": "Proposal",
       "cellbase_help_tooltip": "The cellbase transaction of block N is sent to the miner of block N-11 as reward, learn more from our Consensus Protocol",
       "capacity_amount": "Capacity/Amount",
       "capacity": "Capacity",
-      "reward_info": "Reward info",
+      "reward_info": "Reward Info",
       "detail": "Detail",
       "empty_output": "No cell output target",
       "unspent_output": "Unspent Transaction Output",
