--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -229,6 +229,10 @@
       "secondary_reward": "二级奖励",
       "commit_reward": "提交奖励",
       "proposal_reward": "提案奖励",
+      "base": "基础",
+      "secondary": "二级",
+      "commit": "提交",
+      "proposal": "提案",
       "cellbase_help_tooltip": "区块 N 的 Cellbase 交易将作为奖励发送给区块 N-11 的出块矿工，阅读共识协议了解更多信息",
       "capacity": "Capacity",
       "capacity_amount": "Capacity/Amount",
