--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -63,7 +63,7 @@
     },
     "statistic": {
       "transaction_count": "Transaction Count",
-      "address_count": "Address Count",
+      "address_count": "Unique Addresses Used",
       "total_dao_deposit_depositor": "Total Nervos DAO Deposit & Depositors",
       "total_dao_deposit_title": "Total Deposit",
       "total_dao_deposit": "Total Deposit",
@@ -132,6 +132,7 @@
       "miner_radio": "Radio",
       "miner_addresses_rank": "Top Miners (Recent 7 days)",
       "download_data": "Download Data",
+      "address_count_description": "The total number of unique addresses used on the blockchain.",
       "block_time_distribution_description": "The x axis is block intervals in seconds, and the y axis is the frequency of occurrence in the latest 50,000 blocks.",
       "epoch_time_distribution_description": "The x axis is epoch intervals in hours, and the y axis is the frequency of occurrence in the latest 500 epochs.",
       "average_block_time_description": "Average block intervals with daily & weekly smooth window",
