--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -249,7 +249,7 @@
       "ckb_capacity": "CKB Capacity",
       "nervos_dao_deposit": "Nervos DAO Deposit",
       "nervos_dao_withdraw": "Nervos DAO Withdraw",
-      "udt_transfer": "UDT Transfer",
+      "udt_cell": "UDT Cell",
       "script_args": "args",
       "script_code_hash": "code_hash",
       "script_hash_type": "hash_type",
