--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -177,7 +177,8 @@
     },
     "search": {
       "loading": "Loading...",
-      "empty_result": "Opps! Your search did not match any record. Please try different keywords~",
+      "empty_result": "Opps! Your search did not match any record. \n\nPlease make sure input contains only one of the following items:\n",
+      "empty_result_items": "Block Number/ Block Hash/ Transaction Hash/ Address/ Lock Hash/ Type Hash",
       "address_type_testnet_error": "Testnet address detected，please goto",
       "address_type_mainnet_error": "Mainnet address detected，please goto",
       "address_type_testnet_url": "testnet explorer",
