feat: Add type script to udt page

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -341,6 +341,7 @@
       "symbol": "Symbol",
       "total_amount": "Total Amount",
       "issuer": "Issuer",
+      "type_script": "Type Script",
       "holder_addresses": "Holder Addresses",
       "decimal": "Decimal",
       "search_placeholder": "Address",
