--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -198,6 +198,7 @@
       "block_mined": "Block Mined",
       "dao_deposit": "Nervos DAO Deposit",
       "compensation": "Nervos DAO Compensation",
+      "compensation_tooltip": "Hourly Changes",
       "pending_reward": "Pending Reward",
       "lock_until": "Lock Until",
       "estimated": "Estimated",
