--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -16,7 +16,7 @@
       "invalid_network": "网络出错，请稍后再试",
       "data_too_large": "数据过大，不支持下载",
       "result_not_found": "没有找到搜索结果",
-      "maintenance": "请注意 CKB 浏览器将于 {{start}} 至 {{end}} 处于维护状态",
+      "maintenance": "请注意 CKB 浏览器将于 {{start}} 至 {{end}} 处于维护状态，期间数据更新可能会有延迟。",
       "dismiss": "知道了"
     },
     "navbar": {
