--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -130,7 +130,7 @@
       "tradable": "Tradable",
       "dao_deposit": "Nervos DAO Deposit",
       "liquidity": "Liquidity",
-      "miner_radio": "Radio",
+      "miner_ratio": "Ratio",
       "miner_addresses_rank": "Top Miners (Recent 7 days)",
       "download_data": "Download Data",
       "address_count_description": "The total number of unique addresses used on the blockchain.",
