feat: Support nft in transaction detail page

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -256,6 +256,12 @@
       "nervos_dao_deposit": "Nervos DAO Deposit",
       "nervos_dao_withdraw": "Nervos DAO Withdraw",
       "udt_cell": "UDT Cell",
+      "m_nft_issuer": "m-NFT Issuer",
+      "m_nft_class": "m-NFT Class",
+      "m_nft_token": "m-NFT",
+      "unknown_nft": "anonymous",
+      "nft_limited": "Limited",
+      "nft_unlimited": "Unlimited",
       "script_args": "args",
       "script_code_hash": "code_hash",
       "script_hash_type": "hash_type",
