--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -254,6 +254,12 @@
       "ckb_capacity": "CKB Capacity",
       "nervos_dao_deposit": "Nervos DAO 锁定",
       "nervos_dao_withdraw": "Nervos DAO 解锁",
+      "m_nft_issuer": "m-NFT Issuer",
+      "m_nft_class": "m-NFT Class",
+      "m_nft_token": "m-NFT",
+      "unknown_nft": "匿名",
+      "nft_limited": "限量",
+      "nft_unlimited": "不限量",
       "udt_cell": "代币 Cell",
       "script_args": "args",
       "script_code_hash": "code_hash",
