--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -364,7 +364,7 @@
       "submit_token_info": "提交代币信息",
       "unknown_token_description": "此代币信息暂时不完整，如果你是此代币的拥有者，请提交代币信息",
       "tokens": "代币",
-      "name_symbol": "代币名称 (符合)",
+      "name_symbol": "代币名称 (符号)",
       "transactions": "24小时交易数",
       "address_count": "持币用户数",
       "created_time": "创建时间",
