feat: Update UI and an easter egg for the hardfork

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -172,6 +172,7 @@
       "faucet": "Faucet",
       "community": "Community",
       "twitter": "Twitter",
+      "discord": "Discord",
       "blog": "Blog",
       "telegram": "Telegram",
       "reddit": "Reddit",
