--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -171,6 +171,7 @@
       "faucet": "水龙头",
       "community": "社区",
       "twitter": "Twitter",
+      "discord": "Discord",
       "blog": "Blog",
       "telegram": "Telegram",
       "reddit": "Reddit",
