feat: reformat addresses

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -224,7 +224,7 @@
       "unable_decode_address": "Unable to decode address",
       "pending_reward_tooltip": "The block reward and transaction fee of this block will be sent to the miner after 11 blocks，learn more from our Consensus Protocol",
       "view-new-address": "View in new address format",
-      "view-short-address": "View in short address format",
+      "visit-deprecated-address": "View in deprecated address format",
       "view-deprecated-address": "Display deprecated addresses",
       "displaying-deprecated-address": "Displaying in deprecated address format"
     },
