--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -21,6 +21,7 @@
     },
     "toast": {
       "invalid_network": "Network exception, please try again later",
+      "too_many_request": "Too many requests, please try later",
       "data_too_large": "The data is too large, not available for download",
       "result_not_found": "Search result not found",
       "maintenance": "Please note that CKB Explorer will be under maintenance from {{start}} to {{end}}. Data update during the period might be delayed.",
