feat: add uan and display name of sudt

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -366,6 +366,7 @@
       "sudt": "sUDT",
       "name": "Name",
       "symbol": "Symbol",
+      "uan": "UAN",
       "total_amount": "Total Amount",
       "issuer": "Issuer",
       "type_script": "Type Script",
@@ -376,7 +377,7 @@
       "submit_token_info": "Submit Token Info",
       "unknown_token_description": "The token’s information is incomplete. If you are the owner of this token, please submit token info.",
       "tokens": "Tokens",
-      "name_symbol": "Name (symbol)",
+      "uan_name": "UAN & Name",
       "transactions": "24hr Transactions",
       "address_count": "Address Count",
       "created_time": "Created Time",
