--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -406,6 +406,7 @@
       "transfer-list": "转让记录",
       "holder-list": "持有人列表",
       "holder": "持有人",
+      "owner": "持有人",
       "quantity": "数量",
       "inventory": "目录",
       "action": "操作",
@@ -415,7 +416,8 @@
         "destruction": "销毁"
       },
       "owner": "持有人",
-      "activity": "活动"
+      "activity": "活动",
+      "toggle-age": "切换时间格式"
     },
     "script_list": {
       "title": "脚本",
