refactor: add i18n text of cota

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -397,6 +397,7 @@
       "m_nft": "m-NFT",
       "nrc721": "NRC 721",
       "nrc_721": "NRC 721",
+      "cota": "CoTA",
       "loading": "Loading...",
       "nft": "NFT",
       "tx_hash": "Tx",
