--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -397,6 +397,7 @@
       "m_nft": "m-NFT",
       "nrc721": "NRC 721",
       "nrc_721": "NRC 721",
+      "cota": "CoTA",
       "loading": "加载中...",
       "nft": "NFT",
       "tx_hash": "交易",
@@ -406,7 +407,6 @@
       "transfer-list": "转让记录",
       "holder-list": "持有人列表",
       "holder": "持有人",
-      "owner": "持有人",
       "quantity": "数量",
       "inventory": "目录",
       "action": "操作",
