--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -281,7 +281,8 @@
       "script_code_hash": "code_hash",
       "script_hash_type": "hash_type",
       "script_data": "data",
-      "tx_rejected_reason": "At least one input is invalid"
+      "tx_rejected_reason": "At least one input is invalid",
+      "export-transaction": "Export Transaction"
     },
     "block": {
       "block": "Block",
