feat: show nrc 721 icon and cota icon in tx detail

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -275,6 +275,9 @@
       "m_nft_issuer": "m-NFT Issuer",
       "m_nft_class": "m-NFT Class",
       "m_nft_token": "m-NFT",
+      "nrc_721_token": "NRC 721",
+      "cota_registry": "CoTA Registry",
+      "cota": "CoTA",
       "unknown_nft": "anonymous",
       "nft_limited": "Limited",
       "nft_unlimited": "Unlimited",
