--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -273,6 +273,9 @@
       "m_nft_issuer": "m-NFT Issuer",
       "m_nft_class": "m-NFT Class",
       "m_nft_token": "m-NFT",
+      "nrc_721_token": "NRC 721",
+      "cota_registry": "CoTA Registry",
+      "cota": "CoTA",
       "unknown_nft": "匿名",
       "nft_limited": "限量",
       "nft_unlimited": "不限量",
