feat: add links to prev/next block on block page
Add two links to the prev and next blocks, these two links are
before and next to the block number on the page

Ref: https://github.com/Magickbase/ckb-explorer-public-issues/issues/71

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -315,7 +315,9 @@
       "transactions_root": "Transactions Root",
       "pending": "Pending",
       "pending_tip": "The block reward of this block will be sent to the miner after 11 blocks，learn more from our Consensus Protocol",
-      "reward_sent_tip": "The reward of this block has been sent, click to check the details"
+      "reward_sent_tip": "The reward of this block has been sent, click to check the details",
+      "view_prev_block": "View the previous block",
+      "view_next_block": "View the next block"
     },
     "nervos_dao": {
       "nervos_dao": "Nervos DAO",
