--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -315,7 +315,9 @@
       "witnesses_root": "Witnesses Root",
       "pending": "待发放",
       "pending_tip": "区块奖励将在 11 个区块后发送给矿工，阅读共识协议了解更多信息",
-      "reward_sent_tip": "区块奖励已经发送成功，请点击查看详情"
+      "reward_sent_tip": "区块奖励已经发送成功，请点击查看详情",
+      "view_prev_block": "查看上一区块",
+      "view_next_block": "查看下一区块"
     },
     "nervos_dao": {
       "nervos_dao": "Nervos DAO",
