--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -470,8 +470,19 @@
         "rfc": "RFC",
         "code": "Source Code",
         "deprecated": "Deprecated",
-        "website": "Website"
+        "website": "Website",
+        "detail": "Detail"
       }
+    },
+    "scripts": {
+      "script": "Script",
+      "script_name": "Script Name: ",
+      "script_type": "Script Type: ",
+      "type_id": "Type Id: ",
+      "deployed_cells": "Deployed Cells: ",
+      "referring_cells": "Referring Cells: ",
+      "capacity_of_deployed_cells": "Deployed Cells Capacity: ",
+      "capacity_of_referring_cells": "Referring Cells Capacity: "
     },
     "fee_rate_tracker": {
       "title": "Fee Rate Tracker",
