--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -476,13 +476,13 @@
     },
     "scripts": {
       "script": "Script",
-      "script_name": "Script名称: ",
-      "script_type": "Script类型: ",
-      "type_id": "类型Id: ",
-      "deployed_cells": "部署的Cells: ",
-      "referring_cells": "涉及的Cells: ",
-      "capacity_of_deployed_cells": "部署的Cells所占存储容量: ",
-      "capacity_of_referring_cells": "涉及的Cells所占存储容量: "
+      "script_name": "Script 名称: ",
+      "script_type": "Script 类型: ",
+      "type_id": "Type Id: ",
+      "deployed_cells": "部署的 Cells: ",
+      "referring_cells": "引用的 Cells: ",
+      "capacity_of_deployed_cells": "部署的 Cells 所占 Capacity: ",
+      "capacity_of_referring_cells": "引用的 Cells 所占 Capacity: "
     },
     "fee_rate_tracker": {
       "title": "费率追踪",
