--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -476,6 +476,7 @@
     },
     "scripts": {
       "script": "Script",
+      "unnamed_script": "未命名 Script",
       "script_name": "Script 名称: ",
       "script_type": "Script 类型: ",
       "type_id": "Type Id: ",
