--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -76,10 +76,10 @@
     "statistic": {
       "transaction_count": "Transaction Count",
       "address_count": "Unique Addresses Used",
-      "total_dao_deposit_depositor": "Total Nervos DAO Deposit & Depositors",
+      "total_dao_deposit_depositor": "Total Nervos DAO Deposit & Accrued Total Depositors",
       "total_dao_deposit_title": "Total Deposit",
       "total_dao_deposit": "Total Deposit",
-      "total_dao_depositor": "Total Depositors",
+      "total_dao_depositor": "Accrued Total Depositors",
       "new_dao_deposit_depositor": "Daily Nervos DAO Deposit",
       "new_dao_deposit_title": "Daily Deposit",
       "new_dao_deposit": "Daily New Deposits",
@@ -152,7 +152,7 @@
       "balance_ranking_description": "The first 50 addresses that have the most amount of CKB.",
       "balance_distribution_description": "Shows the address count at specific balance range, and that under specific balance amount.",
       "tx_fee_description": "Total transaction fees charged by miners.",
-      "total_dao_deposit_description": "Shows the total DAO deposit and depositors' address count.",
+      "total_dao_deposit_description": "Shows the total DAO deposit and accrued depositors' address count.",
       "deposit_to_circulation_ratio_description": "The ratio of DAO deposit to circulating supply. Where the circulating supply is equal to the total supply minus the burnt part and the unvested part.",
       "total_supply_description": "Total supply equals the sum of the primary issuance and the secondary issuance; \nThe burnt part equals the sum of the 25% genesis issuance burnt and the burnt portion in the secondary issuance;\nThe unvested part equals the portion that locked by time lock, which will be released gradually by predefined schedule.\nThe circulating supply is equal to the total supply minus the burnt part and the unvested part.",
       "nominal_rpc_description": "The nominal compensation rate provided by DAO when there is no burnt portion in the secondary issuance. The real compensation rate is always higher than the nominal compensation rate.",
