feat: limit 5000 pages on transaction list page
Only the first 5000 pages are accessible for performance

Ref: https://github.com/Magickbase/ckb-explorer-public-issues/issues/119#issuecomment-1370604282

--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -389,7 +389,8 @@
       "total_page": "共",
       "end_page": "页",
       "current_page": "第",
-      "of_page": "页，共"
+      "of_page": "页，共",
+      "only_first_pages_visible": "显示最近 {{pages}} 页"
     },
     "udt": {
       "sudt": "sUDT",
