--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -389,7 +389,8 @@
       "total_page": "Total Page",
       "end_page": "",
       "current_page": "Page",
-      "of_page": "of"
+      "of_page": "of",
+      "only_first_pages_visible": "Showing first {{pages}} pages"
     },
     "udt": {
       "sudt": "sUDT",
