feat: add miner version distribution chart
This PR adds a pie chart of miner version distribution on
/charts/miner-version-distribution page

Ref: https://github.com/Magickbase/ckb-explorer-public-issues/issues/137

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -143,7 +143,11 @@
       "liquidity": "Liquidity",
       "miner_ratio": "Ratio",
       "miner_addresses_rank": "Top Miners (Recent 7 days)",
+      "miner_version_distribution": "Miner Versions (Recent 7 days)",
       "download_data": "Download Data",
+      "version": "Version",
+      "percent": "Percentage",
+      "others": "Others",
       "address_count_description": "The total number of unique addresses used on the blockchain.",
       "block_time_distribution_description": "The x axis is block intervals in seconds, and the y axis is the frequency of occurrence in the latest 50,000 blocks.",
       "epoch_time_distribution_description": "The x axis is epoch intervals in hours, and the y axis is the frequency of occurrence in the latest 500 epochs.",
