--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -296,12 +296,8 @@
       "declared_capacity": "declared",
       "occupied_capacity": "occupied",
       "size": "Size",
-      "size_in_block": "Note: {{bytes}} bytes in block",
-      "compared_to_the_max_size_in_epoch": "Compared to the max size in epoch",
-      "compared_to_the_max_size_in_chain": "Compared to the max size in chain",
+      "size_in_block": "{{bytes}} bytes in block",
       "cycles": "Cycles",
-      "compared_to_the_max_cycles_in_epoch": "Compared to the max cycles in epoch",
-      "compared_to_the_max_cycles_in_chain": "Compared to the max cycles in chain",
       "since": {
         "relative": {
           "epoch": "After {{since}} epochs since committed",
@@ -346,11 +342,7 @@
       "view_prev_block": "View the previous block",
       "view_next_block": "View the next block",
       "size": "Size",
-      "compared_to_the_max_size_in_epoch": "Compared to the max size in epoch",
-      "compared_to_the_max_size_in_chain": "Compared to the max size in chain",
-      "cycles": "Cycles",
-      "compared_to_the_max_cycles_in_epoch": "Compared to the max cycles in epoch",
-      "compared_to_the_max_cycles_in_chain": "Compared to the max cycles in chain"
+      "cycles": "Cycles"
     },
     "nervos_dao": {
       "nervos_dao": "Nervos DAO",
