--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -391,7 +391,8 @@
       "deposit_address_tooltip": "Number of addresses with non-zero balance of Nervos DAO"
     },
     "error": {
-      "maintain": "The site is temporarily down for maintenance. Please check back soon."
+      "maintain": "The site is temporarily down for maintenance. Please check back soon.",
+      "page_crashed_tip": "Opps! Some errors were encountered."
     },
     "pagination": {
       "first": "First",
