--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -391,7 +391,8 @@
       "deposit_address_tooltip": "Nervos DAO 锁定余额不为零的地址"
     },
     "error": {
-      "maintain": "网络维护中，请稍后再试"
+      "maintain": "网络维护中，请稍后再试",
+      "page_crashed_tip": "遇到了一些错误"
     },
     "pagination": {
       "first": "首页",
