feat: implemented according to the UI design

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -481,9 +481,11 @@
       "mins": "mins",
       "secs": "secs",
       "second": "second",
-      "n_days": "{{n}} Days",
+      "date": "Date",
       "shannons_per_byte": "shannons/byte",
-      "confirmation_time_x_fee_rate": "Confirmation Time x Fee Rate (Last {{c}} transactions)",
+      "average_fee_rate": "Average fee rate",
+      "confirmation_time_x_fee_rate": "Confirmation Time x Fee Rate",
+      "last_n_transactions": "Last {{c}} transactions",
       "fee_rate": "Fee Rate",
       "back": "Back",
       "confirmation_time": "Confirmation Time",
