--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -481,9 +481,11 @@
       "mins": "分",
       "secs": "秒",
       "second": "秒",
-      "n_days": "{{n}} 天",
+      "date": "日期",
       "shannons_per_byte": "香农每字节",
-      "confirmation_time_x_fee_rate": "确认时间与费率 (最近{{c}}笔交易)",
+      "average_fee_rate": "平均费率",
+      "confirmation_time_x_fee_rate": "确认时间与费率",
+      "last_n_transactions": "最近{{c}}笔交易",
       "fee_rate": "费率",
       "back": "返回",
       "confirmation_time": "确认时间",
