fix: add entry of `fee rate` page to the header, chart and tooltip bug fix

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -32,6 +32,7 @@
     "navbar": {
       "wallet": "Wallet",
       "charts": "Charts",
+      "fee_rate": "Fee Rate",
       "nervos_dao": "Nervos DAO",
       "faucet": "Faucet",
       "tokens": "Tokens",
