--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -32,6 +32,7 @@
     "navbar": {
       "wallet": "Wallet",
       "charts": "Charts",
+      "fee_rate": "Fee Rate",
       "nervos_dao": "Nervos DAO",
       "faucet": "Faucet",
       "tokens": "Tokens",
@@ -471,6 +472,27 @@
         "deprecated": "Deprecated",
         "website": "Website"
       }
+    },
+    "fee_rate_tracker": {
+      "title": "Fee Rate Tracker",
+      "updated_time": "Updated {{second}}s ago",
+      "low": "Low",
+      "average": "Average",
+      "high": "High",
+      "mins": "mins",
+      "secs": "secs",
+      "second": "second",
+      "date": "Date",
+      "shannons_per_byte": "shannons/byte",
+      "average_fee_rate": "Average fee rate",
+      "confirmation_time_x_fee_rate": "Confirmation Time x Fee Rate",
+      "last_n_transactions": "Last {{c}} transactions",
+      "fee_rate": "Fee Rate",
+      "back": "Back",
+      "confirmation_time": "Confirmation Time",
+      "fee_rate_of_pending_transactions": "Fee Rate of Pending Transactions",
+      "transaction_count": "Transaction Count",
+      "n_days_historical_fee_rate": "{{n}} Days Historical Fee Rate"
     }
   }
 }
