fix: hide incorrect data on fee rate tracker page

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -482,10 +482,10 @@
       "mins": "mins",
       "secs": "secs",
       "second": "second",
+      "seconds": "seconds",
       "date": "Date",
-      "shannons_per_byte": "shannons/byte",
       "average_fee_rate": "Average fee rate",
-      "confirmation_time_x_fee_rate": "Confirmation Time x Fee Rate",
+      "confirmation_time_x_fee_rate": "Fee Rate / Confirmation Time",
       "last_n_transactions": "Last {{c}} transactions",
       "fee_rate": "Fee Rate",
       "back": "Back",
